[package]
name = "restore_photoprism_originals"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.58"
clap = { version = "3.2.5", features = ["derive"] }
glob = "0.3.0"
serde_json = "1.0.81"
